Improve scripts to accept args and report changes

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "tslint": "tslint src/**/*.ts{,x}",
     "eslint": "eslint *.js src",
-    "i18n:template": "ts-node scripts/generateLocaleTemplate.ts",
-    "i18n:update": "ts-node scripts/updateLocales.ts",
+    "i18n:template": "ts-node scripts/generateLocaleTemplate.ts -i 'src/components/**/*.tsx' -o src/locale.json",
+    "i18n:update": "ts-node scripts/updateLocales.ts -i 'src/locale/*.json' -t src/locale.json",
     "lint": "npm run tslint && npm run eslint",
     "test": "NODE_ENV=test karma start --single-run",
     "test:watch": "NODE_ENV=test karma start --watch --no-single-run",
@@ -72,6 +72,7 @@
     "@types/jszip": "^0.0.32",
     "@types/lodash": "^4.14.52",
     "@types/material-ui": "^0.16.49",
+    "@types/minimist": "^1.2.0",
     "@types/mocha": "^2.2.39",
     "@types/node": "^7.0.5",
     "@types/randomcolor": "^0.4.3",
@@ -136,6 +137,7 @@
     "karma-remap-coverage": "^0.1.4",
     "karma-source-map-support": "^1.2.0",
     "karma-webpack": "^2.0.2",
+    "minimist": "^1.2.0",
     "mocha": "^3.2.0",
     "node-sass": "^4.5.0",
     "postcss-loader": "^1.2.2",
