--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "lint": "npm run tslint && npm run eslint",
     "test": "NODE_ENV=test karma start --single-run",
     "test:watch": "NODE_ENV=test karma start --watch --no-single-run",
-    "webpack:validate": "webpack-validator webpack.config.js",
     "dev": "NODE_ENV=development HOT=1 babel-node devServer.js",
     "prod": "npm run test && NODE_ENV=production webpack --bail --progress",
     "modernizr:build": "modernizr -c modernizr-config.json -d ./src/utils/modernizr.js"
@@ -27,8 +26,6 @@
   },
   "homepage": "https://gitlab.com/forabi/cephalo#README",
   "dependencies": {
-    "@types/babel-core": "^6.7.14",
-    "@types/react-helmet": "^0.0.28",
     "bluebird": "^3.4.7",
     "bowser": "^1.4.6",
     "classnames": "^2.2.5",
@@ -51,6 +48,8 @@
     "react-hotkeys": "^0.9.0",
     "react-intl": "^2.2.3",
     "react-redux": "^5.0.2",
+    "react-router": "4",
+    "react-router-dom": "next",
     "react-tap-event-plugin": "^2.0.1",
     "recompose": "^0.22.0",
     "redux": "^3.6.0",
@@ -63,6 +62,7 @@
     "sw-toolbox": "^3.4.0"
   },
   "devDependencies": {
+    "@types/babel-core": "^6.7.14",
     "@types/bluebird": "^3.0.37",
     "@types/bowser": "^1.0.30",
     "@types/classnames": "^0.0.32",
@@ -82,6 +82,7 @@
     "@types/react-addons-css-transition-group": "^15.0.1",
     "@types/react-dom": "^0.14.22",
     "@types/react-dropzone": "^0.0.31",
+    "@types/react-helmet": "^0.0.28",
     "@types/react-intl": "^2.2.2",
     "@types/react-redux": "^4.4.36",
     "@types/react-tap-event-plugin": "^0.0.30",
@@ -144,7 +145,6 @@
     "node-sass": "^4.5.0",
     "postcss-loader": "^1.2.2",
     "sass-loader": "^4.1.1",
-    "static-site-generator-webpack-plugin": "^3.1.0",
     "style-loader": "^0.13.1",
     "svg-react-loader": "^0.4.0-beta.2",
     "svgo": "^0.7.2",
@@ -159,10 +159,8 @@
     "webpack": "2",
     "webpack-dashboard": "^0.3.0",
     "webpack-dev-middleware": "^1.10.0",
-    "webpack-fail-plugin": "^1.0.5",
     "webpack-hot-middleware": "^2.16.1",
     "webpack-html-plugin": "^0.1.1",
-    "webpack-validator": "^2.3.0",
     "worker-loader": "^0.7.1"
   }
 }
