--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
         "webworker",
         "dom"
     ],
+    "noEmitOnError": true,
     "outDir": "build/",
     "allowJs": true,
     "allowSyntheticDefaultImports": true,
