Update deps, add React Router

--- a/.babelrc
+++ b/.babelrc
@@ -12,8 +12,8 @@
         ]
       }
     ],
-    "react",
-    "stage-3"
+    "stage-3",
+    "react"
   ],
   "plugins": [
     "transform-object-rest-spread"
