Fix license ID in package.json

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "keywords": [],
   "author": "Muhammad Fawwaz Orabi <mfawwaz93@gmail.com> (http://forabi.github.io)",
-  "license": "GPLv3",
+  "license": "GPL-3.0",
   "bugs": {
     "url": "https://gitlab.com/forabi/cephalo/issues"
   },
