--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "file-saver": "^1.3.3",
     "idb-keyval": "^2.3.0",
     "jszip": "^3.1.3",
+    "langmap": "^0.0.14",
     "lodash": "^4.17.4",
     "material-ui": "^0.16.7",
     "moment": "^2.15.1",
