--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "recompose": "^0.22.0",
     "redux": "^3.6.0",
     "redux-actions": "^1.2.1",
+    "redux-logger": "^3.0.1",
     "redux-undo": "1.0.0-beta7",
     "reselect": "^2.5.4",
     "resize-observer-polyfill": "^1.3.2",
