--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "exports-loader": "^0.6.3",
     "express": "^4.14.0",
     "file-loader": "^0.9.0",
+    "gh-pages": "^2.0.1",
     "mocha": "^3.1.2",
     "postcss-loader": "^0.13.0",
     "sass-loader": "^7.1.0",
