--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bluebird": "^3.4.6",
     "bowser": "^1.4.6",
     "classnames": "^2.2.5",
+    "core-js": "3.6.5",
     "file-saver": "^1.3.3",
     "idb-keyval": "^2.1.2",
     "jszip": "^3.1.3",
