--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "resize-observer-polyfill": "^1.1.4",
     "scroll-into-view-if-needed": "^1.0.4",
     "serviceworker-webpack-plugin": "^0.1.6",
-    "sw-toolbox": "^3.4.0"
+    "sw-toolbox": "^3.4.0",
+    "ts-loader": "7.0.5"
   },
   "devDependencies": {
     "@types/bluebird": "^3.0.35",
